--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@observablehq/prettier",
-  "version": "2.3.0-dev",
+  "version": "2.3.0-dev-alpha.9",
   "description": "Prettier is an opinionated code formatter",
   "bin": "./bin/prettier.js",
   "repository": "prettier/prettier",
@@ -42,7 +42,6 @@
     "esutils": "2.0.3",
     "fast-glob": "3.2.5",
     "fast-json-stable-stringify": "2.1.0",
-    "diff-sequences": "26.6.2",
     "find-parent-dir": "0.3.0",
     "flow-parser": "0.147.0",
     "get-stdin": "8.0.0",
