--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "src",
     "bin",
     "vendors",
-    "types/index.d.ts"
+    "index.d.ts"
   ],
-  "types": "./types/index.d.ts",
+  "types": "./index.d.ts",
   "dependencies": {
     "@angular/compiler": "12.2.16",
     "@babel/code-frame": "7.16.7",
@@ -164,7 +164,7 @@
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
-    "build": "node ./scripts/build/build.mjs",
+    "build": "node ./scripts/build/build.mjs && cp ./types/index.d.ts ./dist",
     "build:website": "node ./scripts/build-website.mjs",
     "vendors:bundle": "node ./scripts/vendors/bundle-vendors.mjs"
   },
